examples/hello-world-https/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world
        image: nginx:latest
        resources:
          requests:
            memory: 10Mi
            cpu: 20m
          limits:
            memory: 50Mi
            cpu: 50m
        ports:
        - name: http
          containerPort: 80
