examples/hello-world-https/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  selector:
    app: hello-world
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
