examples/hello-world-https/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: hello-world
  annotations:
    cert-manager.io/issuer: hello-world-issuer
    kubernetes.io/ingress.class: "nginx"

spec:
  rules:
    - host: foo.bar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world
                port:
                  number: 80
  tls:
  - hosts:
    - foo.bar
    secretName: foo.bar-tls
